# flake8_half_branch_check

./: half_branch_check.py  setup.cfg  test.py
