[metadata]
name = half_branch_check
version = 0.1.0
description = Ensure if-elif blocks end with an else statement
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://github.com/asottile/flake8-2020
# author = Anthony Sottile
# author_email = asottile@umich.edu
license = MIT
# license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
py_modules = half_branch_check
install_requires =
    flake8>=3.7
    importlib-metadata>=0.9;python_version<"3.8"
python_requires = >=3.6.1

[options.entry_points]
flake8.extension =
    HBC=half_branch_check:Plugin

[bdist_wheel]
universal = True
